fixed some warning, according to IDEA.